<resources>
    <string name="app_name">SFAS</string>
    <string name="title_activity_signin">সাইন ইন</string>
    <string name="title_activity_fingerprint_registration">আঙুলের ছাপ নিবন্ধন</string>
    <string name="title_activity_fingerprint_auth">Fingerprint Authentication</string>
    <string name="title_activity_home">ড্যাশবোর্ড</string>
    <string name="title_activity_member_details">সদস্য স্বীকৃতি ফর্ম</string>
    <string name="title_activity_loan_disbursement_details">লোন বিতরণ ফর্ম</string>
    <string name="title_activity_saving_withdrawn_details">সঞ্চয় উত্তোলন ফর্ম</string>
    <string name="title_activity_early_settlement_details">লোন পূর্ণ পরিশোধ ফর্ম</string>
    <string name="title_fragment_members">সদস্য স্বীকৃতি</string>
    <string name="title_fragment_loan_disbursements">লোন বিতরণ</string>
    <string name="title_fragment_saving_withdrawns">সঞ্চয় উত্তোলন</string>
    <string name="title_fragment_early_settlements">লোন পূর্ণ পরিশোধ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">00000</string>
    <string name="nav_header_subtitle">John Smith</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="signin_password"><![CDATA[আঙুলের ছাপ নিবন্ধিত না হলে <u>এখানে ক্লিক করুন</u>]]></string>
    <string name="ein">ই আই এন</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="signin">সাইন ইন করুন</string>
    <string name="signout">সাইন আউট করুন</string>
    <string name="left_hand">বাম হাত</string>
    <string name="right_hand">ডান হাত</string>
    <string name="thumb_finger">বৃদ্ধাগুলি</string>
    <string name="index_finger">তর্জনী</string>
    <string name="status">স্ট্যাটাস</string>
    <string name="save">সংরক্ষণ করুন</string>
    <string name="branch">ব্রাঞ্চঃ</string>
    <string name="center">কেন্দ্রঃ</string>
    <string name="select_center">কেন্দ্র সিলেক্ট করুন</string>
    <string name="members">সদস্য</string>
    <string name="legends">লিজেন্ড</string>
    <string name="biometric">আঙুলের ছাপ</string>
    <string name="member_image">সদস্যর ছবি</string>
    <string name="voter_id">ভোটার আইডি</string>

    <string name="branch_title">%1s (%2s)</string>
    <string name="day_opening">ডে-ওপেনিংঃ %s</string>

    <string-array name="arr_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="arr_marital">
        <item>Married</item>
        <item>Unmarried</item>
        <item>Widowed</item>
        <item>Divorced</item>
    </string-array>
    <string-array name="arr_member_type">
        <item>Borrower</item>
        <item>Saver</item>
    </string-array>

    <string name="center_no">কেন্দ্র নং</string>
    <string name="member_no">সদস্য নং</string>
    <string name="group_no">গ্রূপ নং</string>
    <string name="member_name">সদস্যের নাম</string>
    <string name="spouse_name">স্বামী/অভিভাবক</string>
    <string name="nominee_name">নমিনি</string>
    <string name="dob">জন্ম তারিখ</string>
    <string name="age">বয়স</string>
    <string name="father_name">পিতার নাম</string>
    <string name="mother_name">মাতার নাম</string>
    <string name="marital_status">বৈবাহিক অবস্থা</string>
    <string name="member_type">সদস্যের ধরণ</string>
    <string name="sex">নারী/পুরুষ</string>
    <string name="address">ঠিকানা</string>
    <string name="nid_no">এন আইডি নং</string>
    <string name="mobile_no">মোবাইল নং</string>
    <string name="spent_amount">বিতরণের পরিমান</string>
    <string name="passbook_no">পাসবুক নাম্বার</string>
    <string name="register_fingerprints">আঙুলের ছাপ নিবন্ধন করুন</string>
    <string name="check_fingerprint">আঙুলের ছাপ যাচাই করুন</string>
    <string name="send_to_server">সার্ভার এ প্রেরণ করুন</string>
    <string name="profile_image">Profile Image</string>
    <string name="fingerprint_image">Fingerprint Image</string>
    <string name="fingerprint_verification_image">Fingerprint Verification Image</string>
    <string name="early_settlement_amount">লোন পূর্ণ পরিশোধের পরিমান</string>
    <string name="withdrawn_types">উত্তোলনের ধরণ</string>
    <string name="dps_amount">ডিপিএস এর পরিমান</string>
    <string name="my_savings_amount">মাই সেভিংসের পরিমান</string>
    <string name="family_savings_amount">ফ্যামিলি সেভিংসের পরিমান</string>
    <string name="lakhpati_amount">লাখপতি স্কিমের পরিমান</string>
    <string name="double_savings_amount">ডাবল বেনিফিট স্কিমের পরিমান</string>

    <string name="name">নামঃ %s</string>
    <string name="spouse">স্বামী/অভিভাবকঃ %s</string>
    <string name="item_member_no">সদস্য নংঃ %s</string>
    <string name="item_center_name">কেন্দ্র নংঃ %s</string>
    <string name="item_withdrawn_type">উত্তোলনের ধরনঃ %s</string>
    <string name="synced">synced</string>
    <string name="unsynced">unsynced</string>
    <string name="connect_fingerprint">ফিঙ্গারপ্রিন্ট স্ক্যানারটি ট্যাবের সাথে সংযুক্ত করুন</string>
    <string name="permission_error">আঙুলের ছাপ নিবন্ধনের প্রক্রিয়াটি শুরু করার জন্য অ্যাপটিকে ডিভাইসের অবস্থা সংক্রান্ত তথ্য পড়ার অনুমতি দিতে হবে</string>
    <string name="scan_finger">আপনার আঙ্গুল স্ক্যানারের উপর রাখুন</string>
    <string name="verify_error">ভুল ই আই এন/আঙ্গুলের ছাপ</string>
    <string name="scan_error">আঙুলের ছাপ শনাক্ত করা সম্ভব হয়নি। আবার চেষ্টা করুন</string>
    <string name="scanner_error">ফিঙ্গারপ্রিন্ট স্ক্যানারে ত্রূটি পাওয়া গেছে</string>
    <string name="scanner_error_message">অনুগ্রহপূর্বক ডিভাইসটি ট্যাব থেকে খুলে আবার সংযুক্ত করুন।</string>
    <string name="fingerprint_error">আঙুলের ছাপের মান সন্তোষজনক নয়</string>
    <string name="fingerprint_error_message">আঙুলের ছাপের কোয়ালিটি স্কোর পাওয়া গেছে %d, যা সন্তোষজনক নয়। ভালো স্কোর পাওয়ার জন্য অনুগ্রহপূর্বক আঙুলটি স্ক্যানারে যথাযথভাবে রাখুন।</string>
    <string name="member_saved">সদস্যের তথ্য সফলভাবে অফলাইনে সংরক্ষণ করা হয়েছে</string>
    <string name="operation_successful">কার্যক্রম সম্পন্ন</string>
    <string name="error_occurred">সমস্যা শনাক্ত</string>
    <string name="ok">ঠিক আছে</string>
    <string name="press_back">অ্যাপ থেকে বের হওয়ার জন্য আরেকবার ব্যাক বাটনটি চাপুন</string>
</resources>
