<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin">
            <TableRow>
                <Button
                    android:id="@+id/btn_memberships"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_memberships"
                    android:drawablePadding="@dimen/padding_l"
                    android:drawableTint="@color/white"
                    android:paddingTop="@dimen/layout_margin"
                    android:paddingBottom="@dimen/layout_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/title_fragment_members"
                    android:enabled="false"/>
                <Button
                    android:id="@+id/btn_loan_disbursements"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_loan"
                    android:drawablePadding="@dimen/padding_l"
                    android:drawableTint="@color/white"
                    android:paddingTop="@dimen/layout_margin"
                    android:paddingBottom="@dimen/layout_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/title_fragment_loan_disbursements"
                    android:enabled="false"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/btn_saving_withdrawns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_withdraw"
                    android:drawablePadding="@dimen/padding_l"
                    android:drawableTint="@color/white"
                    android:paddingTop="@dimen/layout_margin"
                    android:paddingBottom="@dimen/layout_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/title_fragment_saving_withdrawns"
                    android:enabled="false"/>
                <Button
                    android:id="@+id/btn_early_settlements"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_settlement"
                    android:drawablePadding="@dimen/padding_l"
                    android:drawableTint="@color/white"
                    android:paddingTop="@dimen/layout_margin"
                    android:paddingBottom="@dimen/layout_margin"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:text="@string/title_fragment_early_settlements"
                    android:enabled="false"/>
            </TableRow>
        </TableLayout>
    </FrameLayout>
</layout>
